# amplifier-tui

./: .coverage  .gitignore  CONCURRENT-SESSIONS-SPEC.md  DISTRO-FIX.md  FEATURE-BACKLOG.md  FEATURE-IDEAS.md  PROJECTOR-INTEGRATION.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  SESSION-HANDOFF.md  TASKS.md  TEST_PLAN.md  bugs.db  pyproject.toml  run.cmd  run.ps1  run.sh  test_session_creation.py
.amplifier/context/: build-session.md  ux-testing-tools.md  work-instructions.md
.ux-tests/: img_analysis_20260207_100854.yaml  svg_analysis_20260207_100854.yaml  svg_analysis_20260208_122932.yaml
amplifier_tui/: __init__.py  __main__.py  _utils.py  app.py  constants.py  environment.py  history.py  log.py  platform.py  plugin.py  preferences.py  session_manager.py  styles.tcss  theme.py  tmux_app.py  transcript_loader.py
amplifier_tui/commands/: __init__.py  agent_cmds.py  branch_cmds.py  compare_cmds.py  content_cmds.py  dashboard_cmds.py  display_cmds.py  export_cmds.py  file_cmds.py  git_cmds.py  monitor_cmds.py  persistence_cmds.py  plugin_cmds.py  project_cmds.py  recipe_cmds.py  replay_cmds.py  search_cmds.py  session_cmds.py  shell_cmds.py  split_cmds.py  terminal_cmds.py  theme_cmds.py  tmux_cmds.py  token_cmds.py  tool_cmds.py  watch_cmds.py
amplifier_tui/core/: __init__.py  _utils.py  app_base.py  constants.py  conversation.py  environment.py  history.py  platform_info.py  preferences.py  session_manager.py
amplifier_tui/core/commands/: __init__.py  branch_cmds.py  content_cmds.py  dashboard_cmds.py  persistence_cmds.py  plugin_cmds.py  project_cmds.py  projector_cmds.py  replay_cmds.py  (+3 more)
amplifier_tui/desktop/: __init__.py  __main__.py  desktop_app.py  signals.py  theme.py
amplifier_tui/features/: __init__.py  agent_tracker.py  branch_manager.py  compare_manager.py  context_profiler.py  dashboard_stats.py  diff_view.py  export.py  file_watch.py  git_integration.py  include_helpers.py  notifications.py  plugin_loader.py  recipe_tracker.py  replay_engine.py  reverse_search.py  session_scanner.py  session_summarizer.py  tool_log.py
amplifier_tui/persistence/: __init__.py  _base.py  drafts.py  notes.py  pinned_sessions.py  pins.py  refs.py  session_names.py  snippets.py  tags.py  templates.py
amplifier_tui/web/: __init__.py  server.py  web_app.py
amplifier_tui/widgets/: __init__.py  agent_tree_panel.py  bars.py  chat_input.py  commands.py  datamodels.py  indicators.py  messages.py  panels.py  project_panel.py  screens.py  tabs.py  terminal.py  todo_panel.py
docs/: DESKTOP_APP_PLAN.md  WEB_ARCHITECTURE.md  WEB_IMPLEMENTATION_STAGES.md  WEB_NATIVE_DESIGN.md  manual.html
project_design/: CONTEXT.md  DESIGN.md  IMPLEMENTATION.md
tests/: conftest.py  test_agent_tracker.py  test_app.py  test_branch_manager.py  test_commands.py  test_compare_manager.py  test_constants.py  test_context_profiler.py  test_dashboard_stats.py  test_diff_view.py  test_features.py  test_history.py  test_include_helpers.py  test_main.py  test_monitor_cmds.py  test_persistence.py  test_plugin_system.py  test_preferences.py  test_projector_client.py  test_projector_cmds.py  test_recipe_tracker.py  test_replay_engine.py  test_session_manager.py  test_session_scanner.py  test_session_summarizer.py  test_terminal.py  test_tool_log.py  test_utils.py  test_web_commands.py  test_web_server.py  test_web_streaming.py  test_web_websocket.py  test_widgets.py
tools/: bugdb.py  interactive_test_runner.py  svg_parser.py  tui_analyze.py  tui_capture.py  ux_test.sh
(+41 files in other folders)
