[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-tui"
version = "0.1.0"
description = "Proof of concept: Textual TUI for Amplifier"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
]

[project.optional-dependencies]
capture = [
    "textual-capture @ git+https://github.com/ramparte/textual-capture.git",
    "cairosvg>=2.7.0",
]
dev = [
    "pytest-cov>=7.0",
]

# Note: Amplifier dependencies are expected to be installed globally
# via: uv tool install git+https://github.com/microsoft/amplifier
# The TUI will detect if Amplifier is available and fall back to demo mode if not

[project.scripts]
amplifier-tui = "amplifier_tui.__main__:main"

[tool.setuptools]
packages = ["amplifier_tui", "amplifier_tui.commands", "amplifier_tui.features", "amplifier_tui.widgets"]

[tool.pytest.ini_options]
addopts = "--cov=amplifier_tui --cov-report=term-missing"

[tool.coverage.run]
source = ["amplifier_tui"]

[tool.coverage.report]
fail_under = 25

[tool.uv]
package = true
