[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "amplifier-tui"
version = "0.1.0"
description = "Proof of concept: Textual TUI for Amplifier"
requires-python = ">=3.11"
dependencies = [
    "amplifier-distro[amplifier] @ git+https://github.com/ramparte/amplifier-distro",
    "pyyaml>=6.0",
    "pyte>=0.8.2",
    "textual>=0.47.0",
]

[project.optional-dependencies]
capture = [
    "textual-capture @ git+https://github.com/ramparte/textual-capture.git",
    "cairosvg>=2.7.0",
]
dev = [
    "pytest-cov>=7.0",
]

# amplifier-distro brings in core + foundation transitively.
# The TUI uses the distro Bridge for session lifecycle.

[project.scripts]
amplifier-tui = "amplifier_tui.__main__:main"

[tool.setuptools]
packages = ["amplifier_tui", "amplifier_tui.commands", "amplifier_tui.features", "amplifier_tui.widgets"]

[tool.pytest.ini_options]
addopts = "--cov=amplifier_tui --cov-report=term-missing"

[tool.coverage.run]
source = ["amplifier_tui"]

[tool.coverage.report]
fail_under = 25

[tool.uv]
package = true
